# python-project-lvl4

./: .env  .gitignore  Makefile  README.md  check_locales.sh  pyproject.toml  pytest.ini  setup.cfg
.github/workflows/: ci.yml
task_manager/: manage.py  settings.py  urls.py  views.py
task_manager/labels/: admin.py  apps.py  models.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/mixins/: views.py
task_manager/server/: asgi.py  settings.py  urls.py  views.py  wsgi.py
task_manager/statuses/: admin.py  apps.py  models.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py  0002_auto_20210401_0550.py  0003_auto_20210401_0550.py
task_manager/task_manager/: settings.py  urls.py  views.py
task_manager/tasks/: admin.py  filters.py  forms.py  mixins.py  models.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_task_created_at.py  0003_auto_20210501_1908.py  0004_task_labels.py
task_manager/templates/: base.html  content.html  create_page.html  delete_page.html  edit_page.html  index.html  login.html
task_manager/templates/labels/: create.html  delete.html  list.html  update.html
task_manager/templates/statuses/: create.html  delete.html  list.html  update.html
task_manager/templates/tasks/: create.html  delete.html  detail.html  list.html  update.html
task_manager/templates/users/: create.html  delete.html  list.html  update.html
task_manager/users/: apps.py  forms.py  mixins.py  urls.py  views.py
task_manager/users/migrations/: 0001_initial.py
tests/: conftest.py  test_auth.py  test_index.py  test_labels.py  test_statuses.py  test_tasks.py  test_users.py
(+2 files in other folders)
