[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Valentin Khomutenko <valentine.khomutenko@gmail.com>"]
packages = [
    { include = "**/*.py", from = "task_manager" },
]


[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.1.7"
python-dotenv = "^0.15.0"
gunicorn = "^20.0.4"
django-bootstrap4 = "^2.3.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
mypy = "^0.812"
django-stubs = "^1.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
